--- a/main.css
+++ b/main.css
@@ -230,3 +230,34 @@ nav a{
     border-radius: 5px;
 }
 /* end news */
+
+/* footer */
+footer{
+    background-color: yellow;
+    padding: 1rem;
+}
+
+.footer-menu{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-menu a{
+    color: white;
+    text-decoration: none;
+}
+
+.footer-menu ul{
+    list-style: none;
+    display: flex;
+}
+
+.footer-menu li{
+    margin-right: 1rem;
+}
+
+.footer-menu ul li a{
+    text-transform: uppercase;
+    font-size: 14px;
+}
+/* end footer */
