--- a/main.css
+++ b/main.css
@@ -194,7 +194,7 @@ nav a{
 
 /* news */
 .newsletter{
-    background: url('https://plus.unsplash.com/premium_photo-1678112179637-c49ab8b21ae6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+    background: url('https://images.unsplash.com/photo-1505327191481-d31e1fb4ff79?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1649&q=80');
     background-size: cover;
     background-position: center;
     height: 250px;
@@ -243,7 +243,7 @@ footer{
 }
 
 .footer-menu a{
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
